--- a/templates/edit_problem.html
+++ b/templates/edit_problem.html
@@ -669,7 +669,7 @@
         subCategories: [
           {
             name: "Carros",
-            brands: ["Toyota", "Honda", "GM", "Ford", "Fiat", "Volkswagen", "Peugeot", "Chevrolet"]
+            brands: ["Toyota", "Honda", "Ford", "Fiat", "Volkswagen", "Peugeot", "Chevrolet"]
           },
           {
             name: "Motos",
